testdata/invalid/invalid_union_invalid_struct.bop
union U {
    1 -> struct badfieldtype {
        nonamehere;
    }
}